# nTupleReader

./: .gitignore  Doxyfile.in  EventReaderBase.cpp  EventReaderBase.h  HepMC_utils.cpp  HepMC_utils.h  InfoStruct.cpp  InfoStruct.h  InfoStructLinkDef.h  Makefile.am  NTTtest.cpp  NtupleInfo.cpp  NtupleInfo.h  configure.ac  extract.py  getInfo.cpp  nTupleReader-config.in  nTupleReader.cpp  nTupleReader.h  nTupleReader.i  nTupleReader_impl.cpp  nTupleReader_impl.h  pdf.cpp  pdf.h  swig.xsl.in  version.cpp  version.h  weightFunctions.cpp  weightFunctions.h
examples/: Makefile.am  nTupleReaderExample.cpp.in  nTupleReaderExample.py.in
m4Macros/: ax_prog_doxygen.m4
test/: Makefile.am  OutOfBounds.txt  StartAndEnd.txt  StartAndEnd.txt.in  all.py.in  scaleChange.py  startAndEnd.py
